<resources>
    <string name="app_name">To Do List</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">imagen_de_fondo</string>
    <string name="itt">ITT</string>
    <string name="usuario">usuario</string>
    <string name="pass">contraseña</string>
    <string name="login">LOGIN</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="terminado">Terminado</string>
    <string name="boton_login">LogIn</string>
    <string name="text_to">To</string>
    <string name="text_do">Do</string>
    <string name="text_list">List</string>
    <string name="logo_description">TODO</string>
    <string name="newTask">NewTask</string>
    <string name="tituloapp">tituloApp</string>
    <string name="terminartarea">terminarTarea</string>
    <string name="editartarea">editarTarea</string>
</resources>